# sensor

./: .gitignore  README.md  pyproject.toml
hand/: QUICK_START.md  README.md  REALTIME_SETUP.md  TEMPORAL_SMOOTHING.md  WINDOWING_SUMMARY.md  add_windowing_cells.py  backend_api.py  hand_classifier_scaler.pkl  hand_classifier_windowed_scaler.pkl  pca_model.pkl  realtime_hand_detector.html  realtime_hand_detector.py  save_pca_models.py  scaler_pca.pkl  start_system.sh  which_hand_you_use.ipynb  window_params.pkl
