[project]
name = "sensor-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "websocket>=0.2.1",
    "websocket-client>=1.8.0",
    "streamlit>=1.39.0",
    "plotly>=5.24.1",
    "scikit-learn>=1.8.0",
    "flask>=3.1.2",
]
